[gd_scene load_steps=5 format=3 uid="uid://cw8yp680tpf3e"]

[ext_resource type="Script" path="res://Scripts/Quest/QuestUI.gd" id="1_6ubsy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d65hu"]
bg_color = Color(0.054902, 0.160784, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y16lo"]
bg_color = Color(0.0705882, 0.215686, 0.376471, 1)
border_width_right = 10
border_color = Color(0.0352941, 0.105882, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mg5uy"]
bg_color = Color(0.054902, 0.160784, 0.282353, 1)

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ubsy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d65hu")

[node name="Backgrounds" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG_1" type="Panel" parent="CanvasLayer/Panel/Backgrounds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_y16lo")

[node name="BG_2" type="Panel" parent="CanvasLayer/Panel/Backgrounds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mg5uy")

[node name="Contents" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Headings" type="HBoxContainer" parent="CanvasLayer/Panel/Contents"]
layout_mode = 2

[node name="List" type="Label" parent="CanvasLayer/Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Available Quests"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Details" type="Label" parent="CanvasLayer/Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Quest Details"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Details" type="HBoxContainer" parent="CanvasLayer/Panel/Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="QuestList" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuestDetails" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="QuestTitle" type="Label" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestDescription" type="Label" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Description"

[node name="QuestObjectives" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2

[node name="QuestRewards" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "x"
